# scrapy_indeed

./: main.py  pyproject.toml
indeed/indeed/: config.py  settings.py
indeed/indeed/spiders/: vacancies_spider.py
